Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Assign the variable `palermo` to the first element of the `neighborhoods` list."
+    "Assign the variable `palermo` to the first element of the `neighborhoods` list.\n"
    ]
   },
   {
