--- a/index.ipynb
+++ b/index.ipynb
@@ -123,7 +123,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_longitude = None"
+    "\n",
+    "ba_longitude = N"
    ]
   },
   {
