Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -124,7 +124,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "ba_longitude = N"
+    "ba_longitude = [-34.6037, -58.3816]"
    ]
   },
   {
